--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,11 @@
 	box-sizing: border-box;
 }
 
+/* body {
+	height: 100%; 
+	overflow: hidden;
+} */
+
 .site {
 	position: relative;
 }
@@ -14,9 +19,9 @@
 	display: none;
 	width: 860px;
 	position: fixed;
-	top: 22%;
+	top: 50%;
 	left: 50%;
-	transform: translate(-50%, -22%);
+	transform: translate(-50%, -50%);
 	z-index: 3;
 	background: #fff;
 	padding: 20px;
@@ -376,7 +381,6 @@ nav ul.links li a:hover {
 
 .logo {
 	position: absolute;
-	z-index: 7;
 	top: 0;
 }
 
@@ -515,10 +519,9 @@ nav ul.links li a:hover {
 }
 
 footer {
-	background-image: url("../img/footer.jpg");
+	background-color: #242424;
 	background-size: 100%;
 	padding: 20px 0px;
-	max-width: 1420px;
 	margin-left: auto;
 	margin-right: auto;
 }
@@ -717,21 +720,13 @@ footer label {
 
 
 
-.product-list-title {
-	/* width: 70%; */
-	display: block;
-	/* height: 20px; */
-	/* background: rgb(245, 245, 245); */
-	/* margin: 0 auto; */
-	border-radius: 6px;
-	text-align: center;
-}
-
 .product-list-title a {
 	font-family: sans-serif;
 	text-decoration: none;
 	color: coral;
 	font-size: 17px;
+	text-align: center;
+	display: block;
 }
 
 .views-field-body p {
@@ -829,6 +824,8 @@ footer label {
 		width: 155px;
 		padding: 5px;
 		height: 324px;
+		display: flex;
+		flex-direction: column;
 	}
 
 	.loader img {
@@ -1030,8 +1027,7 @@ main {
 }
 
 
-
-.fa-angle-down {
+.customize .fa-caret-down {
 	position: absolute;
 	right: 15px;
 	z-index: 4;
@@ -1039,7 +1035,6 @@ main {
 	transform: translateY(-50%);
 	color: rgb(141, 141, 141);
 }
-
 
 
 .input-text {
@@ -1107,8 +1102,6 @@ form ul {
 	display: -ms-flexbox;
 	display: flex;
 	flex-flow: column;
-	opacity: 0; 
-	visibility: hidden;
 	display: none;
 	border: 1px solid #D9D9D6;
 	background-color: rgb(255, 255, 255);
@@ -1120,7 +1113,6 @@ form ul {
 	overflow: auto;
 	scroll-margin: 50px 0 0 50px;
 	z-index: 5;
-
 	list-style: none;
 }
 
@@ -1170,4 +1162,149 @@ form button img{
 
 .error {
 	border: 1px solid red;
+}
+
+#main-wrapper {
+	background: yellow;
+}
+
+.main-inner-wrapper {
+	position: relative;
+}
+
+.cart-popup {
+	position: fixed;
+	top: 0;
+	background: #fff;
+	height: 100%;
+	width: 410px;
+	transition: all ease 0.3s;
+	box-shadow: 0px 0px 12px rgba(0,0,0,0.3);
+	z-index: 99999;
+}
+
+.position-left {
+	left: -100%;
+	transition: all 0.3s ease;
+}
+
+.active-popup {
+	left: 0;
+}
+
+
+.active {
+	background: #6f703f;
+	color: #111;
+}
+
+.cart-popup-inner {
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+}
+
+.cart-popup-inner header {
+	position: relative;
+}
+
+
+.cart-popup-inner header h2 {
+	text-transform: inherit;
+	text-decoration: inherit;
+}
+
+.cart-popup-inner header h2 {
+	font-size: 24px;
+	display: flex;
+	align-items: center;
+	margin: 0;
+	padding: 20px 50px 20px 20px;
+	border-bottom: 1px solid #EEE;
+}
+
+.cart-popup-inner .sub-header {
+	font-size: 0.8em;
+	padding: 10px 20px;
+	border-bottom: 1px solid #EEE;
+	text-align: center;
+}
+
+.cart-close {
+	position: absolute;
+	height: 40px;
+	width: 40px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	font-size: 30px;
+	color: #FFF;
+	right: 5px;
+	top: 5px;
+	cursor: pointer;
+}
+
+.cart-popup .body {
+	padding: 15px;
+	height: 50%;
+	flex-grow: 1; 
+	overflow-y: scroll;
+}
+
+.cart-popup .body::-webkit-scrollbar {
+	height: 4px;
+	width: 4px;
+	background-color: #F5F5F5;
+}
+
+
+.cart-popup .body::-webkit-scrollbar-thumb {
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgb(0 0 0 / 30%);
+	background-color: #555;
+}
+
+.cart-popup .body::-webkit-scrollbar-track {
+	-webkit-box-shadow: inset 0 0 6px rgb(0 0 0 / 30%);
+	border-radius: 10px;
+	background-color: #F5F5F5;
+}
+
+.mCSB_container {
+	overflow: hidden;
+	width: auto;
+	height: auto;
+}
+
+.majc-cart-item-wrap {
+	margin-bottom: 30px;
+}
+
+.majc-cartitem-list .majc-cart-items-inner .majc-item-img {
+	flex: 0 1 120px;
+	margin-right: 20px;
+	width: 120px;
+}
+
+.majc-cartitem-list .majc-cart-items-inner .majc-item-desc {
+	flex-grow: 1;
+	width: calc( 100% - 140px);
+}
+
+.majc-main-wrapper-bg {
+	opacity: 0.9;
+	visibility: visible;
+}
+
+.main-wrapper-bg {
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	background: rgba(0,0,0,0.7);
+	transition: all ease 0.4s;
+	opacity: 0;
+	visibility: hidden;
+	left: 0;
+	top: 0;
+	z-index: 9999;
 }
